# flst

./: CMakeLists.txt  README.md  flst.cpp  main.cpp  shape.cpp  shape.h  test.cpp  test_oldFLST.cpp  tree.cpp  tree.h
ClassicalFLST/: oldFlst.cpp  oldFlst.h
Experiments/: README.txt  cartoon.txt  church.txt  experiments.txt  meteo.txt
libImage/: image_converter.hpp  image_crop.hpp  image_io.hpp
src/: CMakeLists.txt  Doxyfile  check_FLST.cpp  edgel.cpp  edgel.h  flst.cpp  flst_song.cpp  main.cpp  shape.cpp  shape.h  test_FLST.cpp  tree.cpp  tree.h
src/ClassicalFLST/: oldFlst.h
src/libImage/: CMakeLists.txt  image_io.cpp  sample.hpp
